--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
     <title>Users Panel</title>
 </head>
-<body>
+<body style="background-color: #ababab">
 <noscript>
     You need to enable JavaScript to run this app.
 </noscript>
